--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>João Vitor Rosa- - Projeto perfil</title>
+    <title>João Vitor Rosa</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
